--- a/typed-html/Cargo.toml
+++ b/typed-html/Cargo.toml
@@ -25,8 +25,10 @@ htmlescape = "0.3.1"
 proc-macro-hack = "0.5.4"
 proc-macro-nested = "0.1.3"
 stdweb = { version = "0.4.14", optional = true }
+yew = { version = "0.6.0", optional = true }
 dodrio = { version = "0.1.0", optional = true }
 web-sys = { version = "0.3.16", optional = true, features = ["Event", "Element"] }
 
 [features]
 dodrio_macro = ["web-sys", "dodrio", "typed-html-macros/dodrio"]
+yew_html = ["yew", "stdweb"]
